<resources>
    <string name="app_name">InvoiceTotal</string>
    <string name="total_label">Total</string>
    <string name="discount_amount_Label">Discount Amount</string>
    <string name="discount_percent_Label">Discount Percent</string>
    <string name="subtotal_Label">SubTotal</string>
    <string name="reset_button">Reset</string>
    <string name="percentTV">0%</string>
    <string name="amountTV">$0.00</string>
    <string name="totalTV">$0.00</string>
</resources>
