<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.largent.invoicetotal.MainActivity">

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/total_label"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/discountAmountLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/discountAmountLabel" />

    <TextView
        android:id="@+id/discountAmountLabel"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/discount_amount_Label"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/discountPercentLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/discountPercentLabel" />

    <TextView
        android:id="@+id/discountPercentLabel"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/discount_percent_Label"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        app:layout_constraintRight_toLeftOf="@+id/percentTV"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="28dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/subtotalLabel"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/subtotal_Label"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toRightOf="@+id/discountPercentLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/subTotalET"
        android:layout_width="156dp"
        android:layout_height="28dp"
        android:background="@android:color/holo_orange_dark"
        android:ems="10"
        android:hint="$0.00"
        android:inputType="number"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/subtotalLabel"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@android:color/holo_blue_bright"
        android:singleLine="false"
        android:text="@string/reset_button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/totalLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/amountTV"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/amountTV"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/percentTV"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/percentTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/percentTV"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/totalTV"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/amountTV"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/amountTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/amountTV"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/percentTV"
        android:layout_width="105dp"
        android:layout_height="34dp"
        android:text="@string/percentTV"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="52dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="49dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/discountPercentLabel"
        app:layout_constraintLeft_toRightOf="@+id/discountAmountLabel"
        android:layout_marginLeft="24dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
